<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_margin="2dp"
    android:orientation = "horizontal"
    android:elevation="20dp"
    android:background="@color/white"
    android:layout_weight="1">


    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@mipmap/movie_load128"/>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/text_color"
            android:layout_marginTop="8dp"
            android:lines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="@string/movie_title"
            android:textSize="@dimen/title_size"/>
        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/content_size"
            tools:text="@string/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/release_date"
            android:textSize="@dimen/content_size"
            android:paddingLeft="12dp"
            tools:text="@string/release_date_tmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            </LinearLayout>
        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12sp"
                tools:text="@string/original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/original_title"
                android:textSize="12sp"
                android:paddingLeft="12dp"
                android:lines="1"
                android:ellipsize="marquee"
                tools:text="@string/original_title_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12sp"
                tools:text="@string/original_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/original_language"
                android:textSize="12sp"
                android:paddingLeft="12dp"
                tools:text="@string/original_language_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/content_size"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="4dp"
                tools:text="@string/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/popularity"
                android:textSize="@dimen/content_size"
                android:paddingLeft="12dp"
                android:layout_weight="1"
                tools:text="@string/popularity_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                tools:text="@string/rate"
                android:layout_weight="1"
                android:paddingRight="4dp"
                android:gravity="right"
                android:textSize="@dimen/content_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/rate"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="@dimen/content_size"
                android:paddingLeft="4dp"
                tools:text="@string/rate_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
